--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -35,3 +35,11 @@
 .n-button {
 	flex: 2;
 }
+@media screen and (max-width: 480px) {
+	.n-list {
+		display: none;
+	}
+	.n-button {
+		display: none;
+	}
+}
