--- a/src/components/Services/Servise.css
+++ b/src/components/Services/Servise.css
@@ -45,3 +45,18 @@
 	top: 13rem;
 	left: -18rem;
 }
+@media screen and (max-width: 480px) {
+	.servises {
+		margin-top: 0;
+		flex-direction: column;
+		height: 66rem;
+		padding: 0;
+	}
+	.cards {
+		display: flex;
+		flex-direction: column;
+	}
+	.cards > * {
+		position: static;
+	}
+}
